// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalServiceForm create GitHub 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <div
      class="form-group"
    >
      <label
        class="font-weight-bold"
        for="test-external-service-form-display-name"
      >
        Display name:
      </label>
      <input
        autocomplete="off"
        autocorrect="off"
        class="form-control"
        id="test-external-service-form-display-name"
        required=""
        spellcheck="false"
        type="text"
        value="GitHub"
      />
    </div>
    <div
      class="form-group"
    >
      DynamicallyImportedMonacoSettingsEditor
      <p
        class="form-text text-muted"
      >
        <small>
          Use Ctrl+Space for completion, and hover over JSON properties for documentation.
        </small>
      </p>
    </div>
    <button
      class="btn btnPrimary mb-3 test-add-external-service-button"
      type="submit"
    >
      Add repositories
    </button>
  </form>
</DocumentFragment>
`;

exports[`ExternalServiceForm edit GitHub 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <div
      class="form-group"
    >
      <label
        class="font-weight-bold"
        for="test-external-service-form-display-name"
      >
        Display name:
      </label>
      <input
        autocomplete="off"
        autocorrect="off"
        class="form-control"
        id="test-external-service-form-display-name"
        required=""
        spellcheck="false"
        type="text"
        value="GitHub"
      />
    </div>
    <div
      class="form-group"
    >
      DynamicallyImportedMonacoSettingsEditor
      <p
        class="form-text text-muted"
      >
        <small>
          Use Ctrl+Space for completion, and hover over JSON properties for documentation.
        </small>
      </p>
    </div>
    <button
      class="btn btnPrimary mb-3 test-add-external-service-button"
      type="submit"
    >
      Add repositories
    </button>
  </form>
</DocumentFragment>
`;

exports[`ExternalServiceForm edit GitHub, loading 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <div
      class="form-group"
    >
      <label
        class="font-weight-bold"
        for="test-external-service-form-display-name"
      >
        Display name:
      </label>
      <input
        autocomplete="off"
        autocorrect="off"
        class="form-control"
        disabled=""
        id="test-external-service-form-display-name"
        required=""
        spellcheck="false"
        type="text"
        value="GitHub"
      />
    </div>
    <div
      class="form-group"
    >
      DynamicallyImportedMonacoSettingsEditor
      <p
        class="form-text text-muted"
      >
        <small>
          Use Ctrl+Space for completion, and hover over JSON properties for documentation.
        </small>
      </p>
    </div>
    <button
      class="btn btnPrimary mb-3 test-add-external-service-button"
      disabled=""
      type="submit"
    >
      <div
        class="iconInline loadingSpinner"
      />
      Add repositories
    </button>
  </form>
</DocumentFragment>
`;
